package com.example.gqw.analytics.source;

import com.example.gqw.analytics.entity.EventAttributeType;
import java.util.List;

public interface EventAttributeTypeSource {

    List<EventAttributeType> eventAttributeTypes();
}

