package com.example.gqw.analytics.source;

import com.example.gqw.analytics.entity.EventType;
import java.util.List;

public interface EventTypeSource {

    List<EventType> eventTypes();
}

