package com.example.gqw.analytics.source;

import com.example.gqw.analytics.entity.ModuleType;
import java.util.List;

public interface ModuleTypeSource {

    List<ModuleType> moduleTypes();
}
