package com.example.gqw.analytics.source;

import com.example.gqw.analytics.entity.StageMetricType;
import java.util.List;

public interface StageMetricTypeSource {

    List<StageMetricType> stageMetricTypes();
}

