package com.example.gqw.analytics.source;

import com.example.gqw.analytics.entity.StageType;
import java.util.List;

public interface StageTypeSource {

    List<StageType> stageTypes();
}

